New files and code added, multiple new tests pass